<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".AddComplaintActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_complaint"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/complaint"
        android:importantForAccessibility="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complaint_date"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_margin="5dp"
                android:hint="@string/yyyy_mm_dd"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complaint_title"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_margin="5dp"
                android:hint="@string/title"
                android:inputType="text" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <EditText
            android:id="@+id/editText_description"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:hint="@string/enter_description"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_selectImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp"
            android:textColor="@color/white"
            android:text="@string/upload_image"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_ComplaintProofUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_addComplaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

</LinearLayout>
