<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenComplaintActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ll_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_complaints"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp">

            <ImageView
                android:id="@+id/iv_foodImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/dirtyriver" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtcomplaint_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/water_pollution"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complaint_date"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/txt_complaint_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/yyyy_mm_dd"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtComplaint_Desc"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/complaint_description"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/txt_currect_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:text="@string/status"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/status"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_start_investigate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/start_investigation"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_restLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/mark_as_complete"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>